# 20250830_LANGCHAIN

./: README.md  main.py  node_js.md  pyproject.toml  requirements.txt
.cursor/rules/: my-rules.mdc  test.mdc
lesson/: lesson1_1.py  lesson1_2.ipynb  lesson1_3.md  lesson1_31.md
lesson2/: lesson2_1.ipynb  lesson2_2.ipynb  lesson2_3.ipynb  lesson2_4.ipynb  條件判斷和迴圈.md
lesson3/: lesson3_1.ipynb  lesson3_2.ipynb  lesson3_3.ipynb  lesson3_3_Ai.ipynb
lesson4/: AGENTS.md  launch.json  lesson4_1.ipynb  lesson4_2.py
lesson5/: lesson5_1.ipynb  lesson5_2.py  lesson5_3.py  lesson5_4.py  lesson5_5.ipynb  lesson5_5_.ipynb  lesson5_6.ipynb  lesson5_6_.ipynb  lesson5_7-C.py  lesson5_7-G.py  lesson5_7.py
link/: readme.md
